<resources>
    <string name="app_name">ITMO.Lock</string>
    <string name="rooms">Аудитории</string>
    <string name="members">Участники</string>
    <string name="room_description_sample">Проход в коворкинг и лекционную</string>
    <string name="open">Открыть</string>
    <string name="error_message">Что-то пошло не так</string>
    <string name="unlocked">Замок открыт</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="locked">Замок закрыт</string>
    <string name="login_error">Неверные e-mail или пароль</string>
    <string name="connection_error">Проверьте подключение к интернету</string>
    <string name="email_reg_error">Пользователь с этой почтой уже существует, либо она некорректна</string>
    <string name="name_surname_reg_error">Поле не должно быть пустым</string>
    <string name="login_password_incorrect">Проверьте правильность введенных данных!</string>
    <string name="text_digits_settings">\nQWERTYUIOPASDFGHJKLZXCVBNMqwertzuiopasdfghjklyxcvbnmЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮЁёйцукенгшщзхъфывапролджэячсмитьбю-</string>
    <string name="incorrect_password">Пароль должен содержать хотя бы 8 символов</string>
    <string name="members_title">Доступ к аудитории</string>
</resources>